<resources>
    <string name="app_name">BeerTapp</string>

    <!-- Example Dummy Data for one beer-->
    <string name="price_product">$ 25.99</string>
    <string name="product_name">Blonde Ale</string>
    <string name="quantity">Quantity: 1</string>
    <string name="type_bootle">Bottle: 12 oz</string>
    <string name="supplier_name">Supplier: Jorge Ramos</string>
    <string name="supplier_phone">628-2345675</string>

    <!-- Title for the main activity when is empty [CHAR LIMIT=20] -->
    <string name="empty_view">Ohh, It seems you don\'t have any beer yet. Add a Beer</string>

    <!-- Title for the activity to add a new beer [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Beer</string>

    <!-- Title for the activity to add a new beer [CHAR LIMIT=20] -->
    <string name="test_db_string">The beers table contains beers</string>

    <!-- Label for editor menu option to save beer and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current beer [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="beer_details">Details</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_bottles">Type of Bottles</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_beer_name">Name</string>

    <!-- Text hint for rpice field in the editor [CHAR LIMIT=30] -->
    <string name="hint_beer_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_beer_quantity">Quantity</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="supplier_details">Supplier Info</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Name</string>

    <!-- Text hint for phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Phone</string>

    <!-- Label for dropdown menu option if the type of bottle is unknown [CHAR LIMIT=20] -->
    <string name="bottle_can">Cans</string>

    <!-- Label for dropdown menu option if the bottle is 12oz [CHAR LIMIT=20] -->
    <string name="bootle_12">12 oz</string>

    <!-- Label for dropdown menu option if the bottle is 12oz [CHAR LIMIT=20] -->
    <string name="bootle_16">16 oz</string>

    <!-- Label for dropdown menu option if the bottle is 12oz [CHAR LIMIT=20] -->
    <string name="bootle_22">22 oz</string>

    <!-- Toast message in editor when new beer has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_beer_successful">Your beer was successfully saved</string>

    <!-- Toast message in editor when new beer has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_beer_failed">Error with saving beer</string>

    <!-- Toast message in editor when new beer has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_save_beer_failed">You can\'t save a beer with empty fields</string>

    <!-- Label for the sale button in the UI [CHAR LIMIT=20] -->
    <string name="salebutton">Sale</string>

    <!-- Label for the toast of out of stock of the beers-->
    <string name="toast_out_of_stock">You are out of stock of this beer</string>

    <!-- Label for the toast of not negative inventory of beers-->
    <string name="toast_no_stock">You can\'t have negative inventory of this product</string>

    <!-- Text hint for tittle in the editor [CHAR LIMIT=30] -->
    <string name="add_new_beer">Add a Beer</string>

    <!-- Text hint for tittle in the editor [CHAR LIMIT=30] -->
    <string name="edit_beer">Edit Your Beer</string>

    <!-- Toast message in editor when current beer was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_beer_successful">Beer updated</string>

    <!-- Toast message in editor when current beer has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_beer_failed">Error with updating Beer</string>

    <!-- Toast message in editor when current beer was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_beer_successful">Beer deleted</string>

    <!-- Toast message in editor when current beer has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_beer_failed">Error with deleting Beer</string>

    <!-- Dialog message to ask the user to confirm deleting the current beer [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this beer?</string>

    <!-- Dialog button text for the option to confirm deleting the current beer [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current beer [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog button text for the option to confirm deleting all the beers[CHAR LIMIT=20] -->
    <string name="delete_all_beer_dialog_msg">Delete all beers?</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>


    <string name="beer_price_label">Price: $ </string>

    <string name="phone_save_failed">You must enter a valid phone numer </string>

    <!-- Label for overflow menu option that deletes all data [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Beers</string>



</resources>
