<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_layout"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_6dp">

    <ImageView
        android:id="@+id/beer_image"
        android:layout_width="90dp"
        android:layout_height="@dimen/list_layout"
        android:scaleType="center"
        tools:src="@drawable/beericon" />

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="@dimen/list_layout"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:weightSum="4">

        <TextView
            android:id="@+id/price_product"
            android:layout_width="72dp"
            android:layout_height="5dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_small"
            android:textStyle="bold"
            tools:text="@string/price_product" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="288dp"
            android:layout_height="5dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textOnPrimary"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            tools:text="@string/product_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/quantity_product"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/textOnPrimary"
                android:textSize="@dimen/font_small"
                android:textStyle="bold"
                tools:text="@string/quantity" />

            <TextView
                android:id="@+id/type_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/textOnPrimary"
                android:textSize="@dimen/font_small"
                android:textStyle="bold"
                tools:text="@string/type_bootle" />


        </LinearLayout>

        <TextView
            android:id="@+id/supplier_name"
            android:layout_width="176dp"
            android:layout_height="4dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/textAccent"
            android:textSize="@dimen/font_small"
            tools:text="@string/supplier_name"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

</LinearLayout>